# weather

./: .dockerignore  .env.example  .gitignore  .npmrc  README.md  ToDo.md  biome.json  docker-compose.yml  docker-test.sh  package.json  turbo.json
.github/: copilot-instructions.md
apps/apis/: .dockerignore  .env.example  app.ts  index.ts  package.json  tsconfig.json
apps/apis/app/: db.ts
apps/apis/app/routes/: analystReports.ts  authRoutes.ts  hazardReports.ts  mapReports.ts  newsArticles.ts  publicAdvisories.ts  tweets.ts  userRoutes.ts
apps/apis/app/utils/: auth.ts
apps/apis/data/: analyst_reports.json  data.json  hazard_reports.json  mock_locations.json
apps/classifier/: .dockerignore  .gitignore  pyproject.toml
apps/classifier/models/fine-tuned-model/: config.json  config_sentence_transformers.json
apps/classifier/src/: __main__.py
apps/classifier/src/classifier/: __init__.py
apps/classifier/src/classifier/api/: __init__.py
apps/classifier/src/classifier/config/: __init__.py  keywords.py
apps/classifier/src/classifier/models/: __init__.py
apps/classifier/src/classifier/utils/: __init__.py
apps/mobile/: .dockerignore  .gitignore  App.tsx  global.css  package.json  tsconfig.json
apps/mobile/src/api/: analystReport.ts  dbAdapters.ts
apps/mobile/src/components/analystreport/: AnalystReportForm.tsx
apps/mobile/src/components/analytics/: AnalyticsDashboard.tsx
apps/mobile/src/components/auth/: AuthForm.tsx
apps/mobile/src/contexts/: AuthContext.tsx  DataContext.tsx  LocationContext.tsx
apps/mobile/src/utils/: storage.ts
apps/scraper/: .dockerignore  .gitignore  pyproject.toml
apps/scraper/data/: keywords.json
apps/scraper/src/: __main__.py
apps/scraper/src/scraper/: __init__.py  manager.py
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: analystReport.ts  hazardReport.ts  newsArticle.ts  publicAdvisory.ts  user.ts
apps/web/src/contexts/: AuthContext.tsx  DataContext.tsx  LocationContext.tsx
apps/web/src/i18n/: config.ts
apps/web/src/types/: leaflet.heat.d.ts  types.ts
apps/web/src/utils/: commentGenerator.ts  geolocation.ts  index.ts
backend/: app.ts  eslint.config.js  index.ts  package.json  tsconfig.json
backend/app/: db.ts
backend/app/models/: AnalystReport.ts  HazardReport.ts  NewsArticle.ts  PublicAdvisory.ts  User.ts
backend/app/routes/: analystReports.ts  authRoutes.ts  hazardReports.ts  mapReports.ts  newsArticles.ts  publicAdvisories.ts  tweets.ts  userRoutes.ts
backend/app/utils/: auth.ts
backend/data/: data.json  hazard_reports.json  news_articles.json
classifier/: README.md  api.py  disaster_dataset.csv  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile.apis  Dockerfile.classifier  Dockerfile.scraper  Dockerfile.web
docs/: CLASSIFIER.md  DOCKER.md  ENVIRONMENT.md  SCRAPER.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: analystReport.ts  hazardReport.ts  newsArticle.ts  publicAdvisory.ts  user.ts
frontend/src/components/Analyst/: AnalyticsDashboard.tsx
frontend/src/components/Auth/: AuthForm.tsx
frontend/src/components/Common/: LanguageSwitcher.tsx  ProtectedRoute.tsx  UnauthorizedPage.tsx
frontend/src/components/Dashboard/: DashboardPage.tsx  LocationSummary.tsx  PSABanner.tsx
frontend/src/components/HazardReport/: ReportForm.tsx
frontend/src/components/Layout/: Header.tsx  RollingStats.tsx
frontend/src/components/Map/: MapView.tsx  OfficialMapView.tsx
frontend/src/components/Official/: IssueAdvisoryPage.tsx  OfficialReportsView.tsx
frontend/src/components/Profile/: EditProfilePage.tsx
frontend/src/components/Social/: SocialMonitor.tsx
frontend/src/components/ui/: drawer.tsx  index.ts  input.tsx  sheet.tsx
frontend/src/contexts/: AuthContext.tsx  DataContext.tsx  LocationContext.tsx
frontend/src/i18n/: config.ts
frontend/src/types/: leaflet.heat.d.ts  types.ts
frontend/src/utils/: commentGenerator.ts  geolocation.ts
mobile/: App.js  app.json  global.css  package.json  tailwind.config.js
mobile/src/api/: analystReport.js
mobile/src/components/analystreport/: AnalystReportForm.js
mobile/src/components/analytics/: AnalyticsDashboard.js
mobile/src/components/auth/: AuthForm.js
mobile/src/components/dashboard/: DashboardPage.js  DashboardStats.js  LocationSummary.js
mobile/src/components/hazardreport/: ReportForm.js
mobile/src/components/layout/: Header.js
mobile/src/components/maps/: LiveRiskScore.js  MapView.js  fakeReports.js
mobile/src/components/social/: SocialMonitor.js
mobile/src/contexts/: AuthContext.js  DataContext.js  LocationContext.js
mobile/src/utils/: utils.js
scraper/: README.md  app.py  login_debug.html  pyproject.toml  requirements.txt  scrapy.cfg
scraper/public/: keywords.json
scraper/twitter_scraper/: items.py  pipelines.py  settings.py
scraper/twitter_scraper/spiders/: __init__.py
(+100 files in other folders)
