[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"aiohappyeyeballs",
	"aiohttp",
	"aiosignal",
	"attrs",
	"Automat",
	"bleach",
	"blinker",
	"certifi",
	"cffi",
	"charset-normalizer",
	"click",
	"colorama",
	"constantly",
	"contourpy",
	"cryptography",
	"cssselect",
	"cycler",
	"datasets",
	"defusedxml",
	"dill",
	"filelock",
	"Flask",
	"fonttools",
	"frozenlist",
	"fsspec",
	"h11",
	"hf-xet",
	"huggingface-hub",
	"hyperlink",
	"idna",
	"incremental",
	"itemadapter",
	"itemloaders",
	"itsdangerous",
	"Jinja2",
	"jmespath",
	"joblib",
	"kaggle",
	"kagglehub",
	"kiwisolver",
	"lxml",
	"MarkupSafe",
	"matplotlib",
	"mpmath",
	"multidict",
	"multiprocess",
	"networkx",
	"numpy",
	"outcome",
	"packaging",
	"pandas",
	"parsel",
	"pillow",
	"propcache",
	"Protego",
	"protobuf",
	"pyarrow",
	"pyasn1",
	"pyasn1_modules",
	"pycparser",
	"PyDispatcher",
	"pyOpenSSL",
	"pyparsing",
	"PySocks",
	"python-dateutil",
	"python-slugify",
	"pytz",
	"PyYAML",
	"queuelib",
	"requests",
	"requests-file",
	"scikit-learn",
	"scipy",
	"Scrapy",
	"selenium",
	"sentence-transformers",
	"service-identity",
	"setuptools",
	"six",
	"sniffio",
	"sortedcontainers",
	"sympy",
	"text-unidecode",
	"threadpoolctl",
	"tldextract",
	"torch",
	"torchtext",
	"torchvision",
	"tqdm",
	"trio",
	"trio-websocket",
	"Twisted",
	"typing_extensions",
	"tzdata",
	"urllib3",
	"w3lib",
	"webencodings",
	"websocket-client",
	"Werkzeug",
	"wsproto",
	"xxhash",
	"yarl",
	"zope.interface",
]
