[project]
name = "classifier"
version = "0.1.0"
description = "Disaster classification service using sentence transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"aiohappyeyeballs",
	"aiohttp",
	"aiosignal",
	"attrs",
	"Automat",
	"bleach",
	"blinker",
	"certifi",
	"cffi",
	"charset-normalizer",
	"click",
	"colorama",
	"constantly",
	"contourpy",
	"cryptography",
	"cssselect",
	"cycler",
	"datasets",
	"defusedxml",
	"dill",
	"filelock",
	"Flask",
	"fonttools",
	"frozenlist",
	"fsspec",
	"h11",
	"hf-xet",
	"huggingface-hub",
	"hyperlink",
	"idna",
	"incremental",
	"itemadapter",
	"itemloaders",
	"itsdangerous",
	"Jinja2",
	"jmespath",
	"joblib",
	"kaggle",
	"kagglehub",
	"kiwisolver",
	"lxml",
	"MarkupSafe",
	"matplotlib",
	"mpmath",
	"multidict",
	"multiprocess",
	"networkx",
	"numpy",
	"outcome",
	"packaging",
	"pandas",
	"parsel",
	"pillow",
	"propcache",
	"Protego",
	"protobuf",
	"pyarrow",
	"pyasn1",
	"pyasn1_modules",
	"pycparser",
	"PyDispatcher",
	"pyOpenSSL",
	"pyparsing",
	"PySocks",
	"python-dateutil",
	"python-dotenv>=1.2.1",
	"python-slugify",
	"pytz",
	"PyYAML",
	"queuelib",
	"requests",
	"requests-file",
	"scikit-learn",
	"scipy",
	"Scrapy",
	"selenium",
	"sentence-transformers>=3.0.0",
	"service-identity",
	"setuptools",
	"six",
	"sniffio",
	"sortedcontainers",
	"sympy",
	"text-unidecode",
	"threadpoolctl",
	"tldextract",
	"torch>=2.1.0",
	"torchtext",
	"torchvision",
	"tqdm",
	"transformers>=4.30.0",
	"trio",
	"trio-websocket",
	"Twisted",
	"typing_extensions",
	"tzdata",
	"urllib3",
	"w3lib",
	"webencodings",
	"websocket-client",
	"Werkzeug",
	"wsproto",
	"xxhash",
	"yarl",
	"zope.interface",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
